swap dependency to node-ps because ps-node was failing to correctly list all processes running on OSX and add error emitting

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/fortruce/pstracker",
   "dependencies": {
-    "ps-node": "0.0.4"
+    "node-ps": "0.0.2"
   },
   "keywords": [
     "track",
